# skills-manager

./: .gitignore  MANIFEST.in  README.md  README_ja.md  README_ko.md  README_zh.md  db.py  deploy_skills.py  gui.py  logger.py  pyproject.toml  registry.json  run.py  skill_core.py  skillscan.py  version_manager.py
tests/: README.md
